# Add subdirectories
add_subdirectory(accelerometer)
add_subdirectory(coremark)
add_subdirectory(leds)
add_subdirectory(leds-cpp)
add_subdirectory(potentiometer)
add_subdirectory(rgb-led)
add_subdirectory(spi-flash)
add_subdirectory(switches)
add_subdirectory(switches-interrupt)
add_subdirectory(temperature-humidity)
add_subdirectory(timer-pwm)
add_subdirectory(toggle-io)
add_subdirectory(usart)